Create/Delete CartPriceRuleItem. https://github.com/inklabs/kommerce-core/issues/74

--- a/themes/bootstrap/templates/admin/promotion/cart-price-rule/edit.twig
+++ b/themes/bootstrap/templates/admin/promotion/cart-price-rule/edit.twig
@@ -1,7 +1,7 @@
-{# @var cartPriceRule \inklabs\kommerce\EntityDTO\CouponDTO #}
+{# @var cartPriceRule \inklabs\kommerce\EntityDTO\CartPriceRuleDTO #}
 {% extends '@theme/layout/base-admin.twig' %}
 
-{% block pageTitle %}Coupon - {{ cartPriceRule.name }}{% endblock %}
+{% block pageTitle %}Cart Price Rule - {{ cartPriceRule.name }}{% endblock %}
 
 {% block content %}
     <div class="container">
