--- a/themes/bootstrap/templates/admin/promotion/catalog-promotion/new.twig
+++ b/themes/bootstrap/templates/admin/promotion/catalog-promotion/new.twig
@@ -1,34 +1,26 @@
 {# @var catalogPromotion \inklabs\kommerce\EntityDTO\CatalogPromotionDTO #}
 {% extends '@theme/layout/base-admin.twig' %}
 
-{% block pageTitle %}CatalogPromotion - {{ catalogPromotion.name }}{% endblock %}
+{% block pageTitle %}New Catalog Promotion{% endblock %}
 
 {% block content %}
     <div class="container">
-
-        {% include '@theme/admin/promotion/catalog-promotion/parts/header.twig' %}
-
         <div class="row">
             <div class="col-sm-12">
-                <form action="{{ routeUrl('admin.catalog-promotion.edit.post') }}"
+                <h3>New Catalog Promotion</h3>
+                <form action="{{ routeUrl('admin.catalog-promotion.new.post') }}"
                       method="post"
                       class="form-horizontal"
                       role="form">
                     <fieldset>
                         {{ form.csrf() }}
-                        {{ form.hidden('catalogPromotionId', catalogPromotion.id.hex ) }}
                         <div class="well">
                             {% include '@theme/admin/promotion/catalog-promotion/parts/catalog-promotion-input-fields.twig' %}
                         </div>
 
                         <div class="well">
-                            <div class="pull-right text-muted text-right">
-                                <span title="Created">{{ catalogPromotion.createdFormatted }}</span><br>
-                                <span title="Updated">{{ catalogPromotion.updatedFormatted }}</span><br>
-                            </div>
-
-                            <button type="submit" class="btn btn-primary" data-loading-text="Saving...">
-                                <i class="fa fa-check-circle"></i> Save
+                            <button type="submit" class="btn btn-primary">
+                                <i class="fa fa-check-circle"></i> Create
                             </button>
                             <a href="{{ routeUrl('admin.catalog-promotion') }}" class="btn btn-default">Cancel</a>
                         </div>
