Modifying Coupon UI to work with new DateTime input. https://github.com/inklabs/kommerce-core/issues/83

--- a/themes/bootstrap/templates/admin/coupon/new.twig
+++ b/themes/bootstrap/templates/admin/coupon/new.twig
@@ -1,4 +1,5 @@
 {# @var coupon \inklabs\kommerce\EntityDTO\CouponDTO #}
+{# @var promotionTypes array #}
 {% extends '@theme/layout/base-admin.twig' %}
 
 {% block pageTitle %}New Coupon{% endblock %}
