--- a/themes/bootstrap/templates/admin/promotion/parts/date-time-timzeone-input.twig
+++ b/themes/bootstrap/templates/admin/promotion/parts/date-time-timzeone-input.twig
@@ -18,14 +18,9 @@
     </div>
     <div class="col-sm-4">
         <select name="{{ entityName }}[{{ entityAttribute }}][timezone]" class="form-control input-sm">
-            <option value="UTC">(GMT+00:00) UTC Time</option>
-            <option value="Pacific/Honolulu">(GMT-10:00) Hawaii Time</option>
-            <option value="America/Anchorage">(GMT-09:00) Alaska Time</option>
-            <option value="America/Los_Angeles">(GMT-08:00) Pacific Time</option>
-            <option value="America/Denver">(GMT-07:00) Mountain Time</option>
-            <option value="America/Phoenix">(GMT-07:00) Mountain Time - Arizona</option>
-            <option value="America/Chicago">(GMT-06:00) Central Time</option>
-            <option value="America/New_York">(GMT-05:00) Eastern Time</option>
+            {% for timezone, name in getTimezones() %}
+                <option value="{{ timezone }}"{% if config.timezone == timezone %} selected="selected"{% endif %}>{{ name }}</option>
+            {% endfor %}
         </select>
     </div>
 </div>
