--- a/themes/bootstrap/templates/admin/settings/sales-tax/index.twig
+++ b/themes/bootstrap/templates/admin/settings/sales-tax/index.twig
@@ -21,70 +21,82 @@
                 </p>
 
                 <hr>
-                <h3>Zipcode Rates</h3>
-                <table class="table table-condensed table-striped">
-                    <thead>
-                        <tr>
-                            <th>Zipcode</th>
-                            <th>Rate</th>
-                            <th>Apply to Shipping</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        {% for taxRate in zip5TaxRates %}
+                {% if zip5TaxRates is empty %}
+                    <span class="text-muted">No zipcode rates</span>
+                {% else %}
+                    <h3>Zipcode Rates</h3>
+                    <table class="table table-condensed table-striped">
+                        <thead>
                             <tr>
-                                <td>{{ taxRate.zip5 }}</td>
-                                <td>{{ taxRate.rate|floatPercent }}%</td>
-                                <td>{{ taxRate.applyToShipping|boolYesNo }}</td>
+                                <th>Zipcode</th>
+                                <th>Rate</th>
+                                <th>Apply to Shipping</th>
                             </tr>
-                        {% endfor %}
-                    </tbody>
-                </table>
+                        </thead>
+                        <tbody>
+                            {% for taxRate in zip5TaxRates %}
+                                <tr>
+                                    <td>{{ taxRate.zip5 }}</td>
+                                    <td>{{ taxRate.rate|floatPercent }}%</td>
+                                    <td>{{ taxRate.applyToShipping|boolYesNo }}</td>
+                                </tr>
+                            {% endfor %}
+                        </tbody>
+                    </table>
+                {% endif %}
 
                 <hr>
-                <h3>Zipcode Range Rates</h3>
-                <table class="table table-condensed table-striped">
-                    <thead>
-                        <tr>
-                            <th>Zipcodes</th>
-                            <th>Rate</th>
-                            <th>Apply to Shipping</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        {% for taxRate in zip5RangeTaxRates %}
+                {% if zip5RangeTaxRates is empty %}
+                    <span class="text-muted">No zipcode range rates</span>
+                {% else %}
+                    <h3>Zipcode Range Rates</h3>
+                    <table class="table table-condensed table-striped">
+                        <thead>
                             <tr>
-                                <td>{{ taxRate.zip5From }} - {{ taxRate.zip5To }}</td>
-                                <td>{{ taxRate.rate|floatPercent }}%</td>
-                                <td>{{ taxRate.applyToShipping|boolYesNo }}</td>
+                                <th>Zipcodes</th>
+                                <th>Rate</th>
+                                <th>Apply to Shipping</th>
                             </tr>
-                        {% endfor %}
-                    </tbody>
-                </table>
+                        </thead>
+                        <tbody>
+                            {% for taxRate in zip5RangeTaxRates %}
+                                <tr>
+                                    <td>{{ taxRate.zip5From }} - {{ taxRate.zip5To }}</td>
+                                    <td>{{ taxRate.rate|floatPercent }}%</td>
+                                    <td>{{ taxRate.applyToShipping|boolYesNo }}</td>
+                                </tr>
+                            {% endfor %}
+                        </tbody>
+                    </table>
+                {% endif %}
 
                 <hr>
-                <h3>State Rates</h3>
-                <table class="table table-condensed table-striped">
-                    <thead>
-                        <tr>
-                            <th>State</th>
-                            <th>Rate</th>
-                            <th>Apply to Shipping</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        {% for taxRate in stateTaxRates %}
+                {% if stateTaxRates is empty %}
+                    <span class="text-muted">No state rates</span>
+                {% else %}
+                    <h3>State Rates</h3>
+                    <table class="table table-condensed table-striped">
+                        <thead>
                             <tr>
-                                <td>
-                                    {{ validStatesMap[taxRate.state] }}
-                                    <span class="text-muted small">({{ taxRate.state }})</span>
-                                </td>
-                                <td>{{ taxRate.rate|floatPercent }}%</td>
-                                <td>{{ taxRate.applyToShipping|boolYesNo }}</td>
+                                <th>State</th>
+                                <th>Rate</th>
+                                <th>Apply to Shipping</th>
                             </tr>
-                        {% endfor %}
-                    </tbody>
-                </table>
+                        </thead>
+                        <tbody>
+                            {% for taxRate in stateTaxRates %}
+                                <tr>
+                                    <td>
+                                        {{ validStatesMap[taxRate.state] }}
+                                        <span class="text-muted small">({{ taxRate.state }})</span>
+                                    </td>
+                                    <td>{{ taxRate.rate|floatPercent }}%</td>
+                                    <td>{{ taxRate.applyToShipping|boolYesNo }}</td>
+                                </tr>
+                            {% endfor %}
+                        </tbody>
+                    </table>
+                {% endif %}
             </div>
         </div>
     </div>
