Updating coupon create/edit input to work with slugs. https://github.com/inklabs/kommerce-core/issues/83

--- a/themes/bootstrap/templates/admin/coupon/parts/coupon-intput-fields.twig
+++ b/themes/bootstrap/templates/admin/coupon/parts/coupon-intput-fields.twig
@@ -29,7 +29,7 @@
     <div class="col-sm-3">
         {{ form.select(
             'coupon[type]',
-            coupon.type.id,
+            coupon.type.slug,
             promotionTypes,
             'coupon-type',
             'form-control input-sm',
