Adding ui for admin attributes. https://github.com/inklabs/kommerce-core/issues/85

--- a/themes/bootstrap/templates/layout/admin-parts/header.twig
+++ b/themes/bootstrap/templates/layout/admin-parts/header.twig
@@ -21,6 +21,7 @@
                         <li><a href="{{ routeUrl('admin.product') }}">Products</a></li>
                         <li><a href="{{ routeUrl('admin.tag') }}">Tags</a></li>
                         <li><a href="{{ routeUrl('admin.option') }}">Options</a></li>
+                        <li><a href="{{ routeUrl('admin.attribute') }}">Attributes</a></li>
                     </ul>
                 </li>
                 <li class="dropdown">
