--- a/themes/bootstrap/templates/admin/promotion/cart-price-rule/index.twig
+++ b/themes/bootstrap/templates/admin/promotion/cart-price-rule/index.twig
@@ -23,44 +23,7 @@
                 </form>
 
                 {{ paginate.detailed(pagination) }}
-
-                <table class="table table-condensed">
-                    <thead>
-                        <tr>
-                            <th>Name</th>
-                            <th>Redemptions</th>
-                            <th>Reduces Tax Subtotal</th>
-                            <th>Period</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        {% for cartPriceRule in cartPriceRules %}
-                            <tr>
-                                <td>
-                                    <a href="{{ adminCartPriceRuleUrl(cartPriceRule) }}">
-                                        {{ cartPriceRule.name }}
-                                    </a>
-                                </td>
-                                <td>
-                                    {{ cartPriceRule.redemptions }} of
-                                    {% if cartPriceRule.maxRedemptions is null %}
-                                        <span class="text-muted small">[unlimited]</span>
-                                    {% else %}
-                                        {{ cartPriceRule.maxRedemptions }}
-                                    {% endif %}
-                                </td>
-                                <td>{{ cartPriceRule.reducesTaxSubtotal|boolYesNo }}</td>
-                                <td>
-                                    {{ cartPriceRule.start | formatDate }}
-                                    -
-                                    {{ cartPriceRule.end | formatDate }}
-                                </td>
-                            </tr>
-                        {% else %}
-                            <tr><td colspan="100%">No cart price rules</td></tr>
-                        {% endfor %}
-                    </tbody>
-                </table>
+                {% include '@theme/admin/promotion/cart-price-rule/parts/cart-price-rule-list.twig' with {'cartPriceRules': cartPriceRules} only %}
                 {{ paginate.detailed(pagination) }}
             </div>
         </div>
