--- a/themes/bootstrap/templates/admin/order/index.twig
+++ b/themes/bootstrap/templates/admin/order/index.twig
@@ -17,69 +17,7 @@
                 </form>
 
                 {{ paginate.detailed(pagination) }}
-
-                <table class="table table-condensed">
-                    <thead>
-                        <tr>
-                            <th>Reference #</th>
-                            <th>User</th>
-                            <th>Status</th>
-                            <th class="hidden-xs">Total</th>
-                            <th>Ship To</th>
-                            <th class="hidden-xs">Email</th>
-                            <th class="hidden-xs">Created</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        {% for order in orders %}
-                            <tr>
-                                <td>
-                                    <a href="{{ adminOrderUrl(order) }}">
-                                        <div class="order-number">{{ order.referenceNumber }}</div>
-                                    </a>
-                                </td>
-                                <td>
-                                    {% if order.user is not null %}
-                                        {{ order.user.firstName }}
-                                        {{ order.user.lastName }}
-                                    {% endif %}
-                                </td>
-                                <td>{{ orderStatus.label(order) }}</td>
-                                <td class="hidden-xs">{{ order.total.total | displayPrice }}</td>
-                                <td>
-                                    {{ order.shippingAddress.firstName }}
-                                    {{ order.shippingAddress.lastName }}
-
-                                    {% if order.shippingAddress.city is not null %}
-                                        <span class="text-muted small">
-                                            (
-                                                {{- order.shippingAddress.city }},
-                                                {{ order.shippingAddress.state -}}
-                                            )
-                                        </span>
-                                    {% endif %}
-
-                                    <div class="visible-xs">
-                                        Total: {{ order.total.total | displayPrice }}<br>
-                                        <span class="small text-muted">E-mail:
-                                            {{ order.shippingAddress.email }}<br>
-                                        </span>
-                                        <span class="small text-muted">Created:
-                                            {{ order.created | formatDate }}
-                                        </span>
-                                    </div>
-                                </td>
-                                <td class="hidden-xs small text-muted">
-                                    {{ order.shippingAddress.email }}
-                                </td>
-                                <td class="hidden-xs small text-muted">{{ order.created | formatDate }}</td>
-                            </tr>
-                        {% else %}
-                            <td colspan="100%">No orders</td>
-                        {% endfor %}
-                    </tbody>
-                </table>
-
+                {% include '@theme/admin/order/parts/order-list.twig' with {'orders': orders} only %}
                 {{ paginate.detailed(pagination) }}
             </div>
         </div>
