--- a/themes/bootstrap/templates/admin/promotion/catalog-promotion/index.twig
+++ b/themes/bootstrap/templates/admin/promotion/catalog-promotion/index.twig
@@ -24,68 +24,7 @@
                 </form>
 
                 {{ paginate.detailed(pagination) }}
-
-                <table class="table table-condensed">
-                    <thead>
-                        <tr>
-                            <th>Name</th>
-                            <th>Tag</th>
-                            <th>Discount</th>
-                            <th>Redemptions</th>
-                            <th>Min Order</th>
-                            <th>Max Order</th>
-                            <th>Period</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        {% for catalogPromotion in catalogPromotions %}
-                            <tr>
-                                <td>
-                                    <a href="{{ adminCatalogPromotionUrl(catalogPromotion) }}">
-                                        {{ catalogPromotion.name }}
-                                    </a>
-                                </td>
-                                <td>
-                                    {% if catalogPromotion.tag is null %}
-                                        <span class="text-muted small">[none]</span>
-                                    {% else %}
-                                        {{ catalogPromotion.tag.name }}
-                                    {% endif %}
-                                </td>
-                                <td>{{ catalogPromotion | displayPromotionValue }}</td>
-                                <td>
-                                    {{ catalogPromotion.redemptions }} of
-                                    {% if catalogPromotion.maxRedemptions is null %}
-                                        <span class="text-muted small">[unlimited]</span>
-                                    {% else %}
-                                        {{ catalogPromotion.maxRedemptions }}
-                                    {% endif %}
-                                </td>
-                                <td>
-                                    {% if catalogPromotion.minOrderValue is null %}
-                                        <span class="text-muted small">[no minimum]</span>
-                                    {% else %}
-                                        {{ catalogPromotion.minOrderValue | displayPrice }}
-                                    {% endif %}
-                                </td>
-                                <td>
-                                    {% if catalogPromotion.maxOrderValue is null %}
-                                        <span class="text-muted small">[no maximum]</span>
-                                    {% else %}
-                                        {{ catalogPromotion.maxOrderValue | displayPrice }}
-                                    {% endif %}
-                                </td>
-                                <td>
-                                    {{ catalogPromotion.start | formatDate }}
-                                    -
-                                    {{ catalogPromotion.end | formatDate }}
-                                </td>
-                            </tr>
-                        {% else %}
-                            <tr><td colspan="100%">No catalog promotions</td></tr>
-                        {% endfor %}
-                    </tbody>
-                </table>
+                {% include '@theme/admin/promotion/catalog-promotion/parts/catalog-promotion-list.twig' with {'catalogPromotions': catalogPromotions} only %}
                 {{ paginate.detailed(pagination) }}
             </div>
         </div>
