--- a/themes/bootstrap/templates/admin/user/index.twig
+++ b/themes/bootstrap/templates/admin/user/index.twig
@@ -17,36 +17,7 @@
                 </form>
 
                 {{ paginate.detailed(pagination) }}
-
-                <table class="table table-condensed">
-                    <thead>
-                        <tr>
-                            <th>External ID</th>
-                            <th>Name</th>
-                            <th>email</th>
-                            <th>logins</th>
-                            <th>Last Login</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        {% for user in users %}
-                            <tr>
-                                <td>
-                                    {% if user.externalId is not null %}
-                                        {{ user.externalId }}
-                                    {% else %}
-                                        <span class="text-muted small">[none]</span>
-                                    {% endif %}
-                                </td>
-                                <td>{{ user.firstName }} {{ user.lastName }}</td>
-                                <td>{{ user.email }}</td>
-                                <td>{{ user.totalLogins }}</td>
-                                <td>{{ user.lastLogin | formatDate }}</td>
-                            </tr>
-                        {% endfor %}
-                    </tbody>
-                </table>
-
+                {% include '@theme/admin/user/parts/user-list.twig' with {'users': users} only %}
                 {{ paginate.detailed(pagination) }}
             </div>
         </div>
