--- a/themes/bootstrap/templates/admin/attribute/parts/navigation.twig
+++ b/themes/bootstrap/templates/admin/attribute/parts/navigation.twig
@@ -4,6 +4,14 @@
     {
         'name': 'Edit',
         'url' : routeUrl('admin.attribute.edit', {'attributeId': attribute.id.hex})
+    },
+    {
+        'name': 'Attribute Values <span class="text-muted">(' ~ attribute.attributeValues|length ~ ')</span>',
+        'url' : routeUrl('admin.attribute.attribute-values', {'attributeId': attribute.id.hex})
+    },
+    {
+        'name': 'Product Attributes <span class="text-muted">(' ~ attribute.productAttributes|length ~ ')</span>',
+        'url' : routeUrl('admin.attribute.product-attributes', {'attributeId': attribute.id.hex})
     }
 ] %}
 
