Create/delete AttributeValue. https://github.com/inklabs/kommerce-core/issues/86

--- a/themes/bootstrap/templates/admin/option/values.twig
+++ b/themes/bootstrap/templates/admin/option/values.twig
@@ -36,7 +36,7 @@
                     <h2>Add Option Value:</h2>
                     <form action="{{ routeUrl('admin.option.add-option-value') }}"
                           method="post"
-                          class="form pull-right">
+                          class="form-horizontal">
 
                         <fieldset>
                             {{ form.csrf() }}
