--- a/themes/bootstrap/templates/admin/attribute/parts/attribute-intput-fields.twig
+++ b/themes/bootstrap/templates/admin/attribute/parts/attribute-intput-fields.twig
@@ -26,11 +26,12 @@
 <div class="row form-group">
     <label for="attribute-description" class="control-label col-sm-3">Description</label>
     <div class="col-sm-8">
-        <input type="text"
-               id="attribute-description"
-               name="attribute[description]"
-               value="{{ attribute.description }}"
-               class="form-control"
-               maxlength="255"/>
+        <textarea name="attribute[description]"
+                  id="attribute-description"
+                  class="form-control"
+                  rows="5"
+                  maxlength="65535">
+            {{- attribute.description -}}
+        </textarea>
     </div>
 </div>
