Using product-list.twig for ProductAttributes. https://github.com/inklabs/kommerce-core/issues/87

--- a/themes/bootstrap/templates/admin/attribute/attribute-value/parts/navigation.twig
+++ b/themes/bootstrap/templates/admin/attribute/attribute-value/parts/navigation.twig
@@ -6,7 +6,7 @@
         'url' : routeUrl('admin.attribute.attribute-value.edit', {'attributeValueId': attributeValue.id.hex})
     },
     {
-        'name': 'Product Attributes <span class="text-muted">(' ~ attributeValue.productAttributes|length ~ ')</span>',
+        'name': 'Products <span class="text-muted">(' ~ attributeValue.productAttributes|length ~ ')</span>',
         'url' : routeUrl('admin.attribute.attribute-value.product-attributes', {'attributeValueId': attributeValue.id.hex})
     }
 ] %}
