--- a/themes/bootstrap/templates/admin/attribute/attribute-value/product-attributes.twig
+++ b/themes/bootstrap/templates/admin/attribute/attribute-value/product-attributes.twig
@@ -12,7 +12,7 @@
             <div class="col-sm-12">
                 <fieldset>
                     <br>
-                    {% embed '@theme/admin/attribute/attribute-value/parts/product-attributes-list.twig' with {'productAttributes': attributeValue.productAttributes} %}
+                    {% embed '@theme/admin/product/parts/product-list.twig' with {'products': products} %}
                         {% block thead %}
                             <th class="text-right">Actions</th>
                         {% endblock %}
@@ -24,7 +24,7 @@
                                     {{ form.csrf() }}
                                     {{ form.hidden('attributeId', attribute.id.hex) }}
                                     {{ form.hidden('productAttributeId', productAttribute.id.hex) }}
-                                    <button type="submit" class="btn btn-danger btn-xs" title="Delete Product Attribute"><i class="fa fa-remove"></i></button>
+                                    <button type="submit" class="btn btn-danger btn-xs" title="Remove Product"><i class="fa fa-minus"></i></button>
                                 </form>
                             </td>
                         {% endblock %}
