--- a/themes/bootstrap/templates/admin/attribute/attribute-value/parts/product-attributes-list.twig
+++ b/themes/bootstrap/templates/admin/attribute/attribute-value/parts/product-attributes-list.twig
@@ -1,23 +1,21 @@
-{# @var optionProducts \inklabs\kommerce\EntityDTO\OptionProductDTO[] #}
+{# @var productAttributes \inklabs\kommerce\EntityDTO\ProductAttributeDTO[] #}
 <table class="table table-condensed">
     <thead>
         <tr>
             {% include '@theme/admin/product/parts/product-list-head.twig' %}
-            <th>Sort Order</th>
             {% block thead %}{% endblock %}
         </tr>
     </thead>
     <tbody>
-        {% for optionProduct in optionProducts %}
+        {% for productAttribute in productAttributes %}
             <tr>
-                {% include '@theme/admin/product/parts/product-list-body.twig' with {'product': optionProduct.product} %}
-                <td>{{ optionProduct.sortOrder }}</td>
+                {% include '@theme/admin/product/parts/product-list-body.twig' with {'product': productAttribute.product} %}
                 {% block tbody %}{% endblock %}
             </tr>
         {% else %}
             <tr>
                 <td colspan="100%">
-                    <span class="text-muted">No option products.</span>
+                    <span class="text-muted">No product attributes.</span>
                 </td>
             </tr>
         {% endfor %}
