--- a/themes/bootstrap/templates/admin/product/parts/product-list.twig
+++ b/themes/bootstrap/templates/admin/product/parts/product-list.twig
@@ -2,31 +2,14 @@
 <table class="table table-condensed">
     <thead>
         <tr>
-            <td></td>
-            <th>SKU</th>
-            <th>Name</th>
-            <th>Price</th>
-            <th>Qty</th>
-            <th>Active</th>
+            {% include '@theme/admin/product/parts/product-list-head.twig' %}
             {% block thead %}{% endblock %}
         </tr>
     </thead>
     <tbody>
         {% for product in products %}
             <tr>
-                <td>
-                    <a href="{{ adminProductUrl(product) }}">
-                        <img src="{{ productImageUrl(product) }}"
-                             width="50"
-                             height="50"
-                             style="width: 50px; height: 50px;">
-                    </a>
-                </td>
-                <td>{{ product.sku }}</td>
-                <td><a href="{{ adminProductUrl(product) }}">{{ product.name }}</a></td>
-                <td>{{ product.unitPrice|displayPrice }}</td>
-                <td>{{ product.quantity }}</td>
-                <td>{{ product.isActive ? 'yes' : 'no' }}</td>
+                {% include '@theme/admin/product/parts/product-list-body.twig' %}
                 {% block tbody %}{% endblock %}
             </tr>
         {% else %}
