--- a/themes/bootstrap/templates/admin/attribute/attribute-value/product-attributes.twig
+++ b/themes/bootstrap/templates/admin/attribute/attribute-value/product-attributes.twig
@@ -22,6 +22,7 @@
                                       method="post"
                                       class="form pull-right">
                                     {{ form.csrf() }}
+                                    {{ form.hidden('attributeValueId', attributeValue.id.hex) }}
                                     {{ form.hidden('productAttributeId', productAttribute.id.hex) }}
                                     <button type="submit" class="btn btn-danger btn-xs" title="Remove Product"><i class="fa fa-minus"></i></button>
                                 </form>
