Allowing to remove AttributeValue. https://github.com/inklabs/kommerce-core/issues/87

--- a/themes/bootstrap/templates/admin/attribute/attribute-value/parts/actions.twig
+++ b/themes/bootstrap/templates/admin/attribute/attribute-value/parts/actions.twig
@@ -19,6 +19,7 @@
                       method="post"
                       role="form">
                     {{ form.csrf() }}
+                    {{ form.hidden('attributeId', attributeValue.attribute.id.getHex()) }}
                     {{ form.hidden('attributeValueId', attributeValue.id.getHex()) }}
 
                     <button type="submit" class="btn btn-danger btn-xs">
