--- a/themes/bootstrap/templates/layout/admin-parts/header.twig
+++ b/themes/bootstrap/templates/layout/admin-parts/header.twig
@@ -50,6 +50,18 @@
                         <li><a href="{{ routeUrl('admin.settings.sales-tax') }}">Sales Tax Rules</a></li>
                     </ul>
                 </li>
+                <li class="dropdown">
+                    <a href="#"
+                       class="dropdown-toggle"
+                       data-toggle="dropdown"
+                       role="button"
+                       aria-haspopup="true"
+                       aria-expanded="false">Tools <span class="caret"></span>
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a href="{{ routeUrl('admin.tools.ad-hoc-shipment.new') }}">Ad Hoc Shipment</a></li>
+                    </ul>
+                </li>
 
                 <li class="divider-vertical hidden-xs"></li>
             </ul>
