Listing attributes on admin product page. https://github.com/inklabs/kommerce-core/issues/92

--- a/themes/bootstrap/templates/admin/product/parts/navigation.twig
+++ b/themes/bootstrap/templates/admin/product/parts/navigation.twig
@@ -18,6 +18,10 @@
         'url' : routeUrl('admin.product.options', {'productId': product.id.hex})
     },
     {
+        'name': 'Attributes',
+        'url' : routeUrl('admin.product.attributes', {'productId': product.id.hex})
+    },
+    {
         'name': 'Quantity Discounts',
         'url' : routeUrl('admin.product.quantity-discounts', {'productId': product.id.hex})
     }
