--- a/themes/bootstrap/templates/admin/product/parts/navigation.twig
+++ b/themes/bootstrap/templates/admin/product/parts/navigation.twig
@@ -6,23 +6,23 @@
         'url' : routeUrl('admin.product.edit', {'productId': product.id.hex})
     },
     {
-        'name': 'Images',
+        'name': 'Images <span class="text-muted">(' ~ product.images|length ~ ')</span>',
         'url' : routeUrl('admin.product.images', {'productId': product.id.hex})
     },
     {
-        'name': 'Tags',
+        'name': 'Tags <span class="text-muted">(' ~ product.tags|length ~ ')</span>',
         'url' : routeUrl('admin.product.tags', {'productId': product.id.hex})
     },
     {
-        'name': 'Options',
+        'name': 'Options <span class="text-muted">(' ~ (product.options|length + product.textOptions|length) ~ ')</span>',
         'url' : routeUrl('admin.product.options', {'productId': product.id.hex})
     },
     {
-        'name': 'Attributes',
+        'name': 'Attributes <span class="text-muted">(' ~ product.productAttributes|length ~ ')</span>',
         'url' : routeUrl('admin.product.attributes', {'productId': product.id.hex})
     },
     {
-        'name': 'Quantity Discounts',
+        'name': 'Quantity Discounts <span class="text-muted">(' ~ product.productQuantityDiscounts|length ~ ')</span>',
         'url' : routeUrl('admin.product.quantity-discounts', {'productId': product.id.hex})
     }
 ] %}
