Reorganize ad hoc shipments. https://github.com/inklabs/kommerce-core/issues/94

--- a/themes/bootstrap/templates/layout/admin-parts/header.twig
+++ b/themes/bootstrap/templates/layout/admin-parts/header.twig
@@ -59,7 +59,7 @@
                        aria-expanded="false">Tools <span class="caret"></span>
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a href="{{ routeUrl('admin.tools.ad-hoc-shipment.new') }}">Ad Hoc Shipment</a></li>
+                        <li><a href="{{ routeUrl('admin.tools.ad-hoc-shipment') }}">Ad Hoc Shipments</a></li>
                     </ul>
                 </li>
 
