--- a/themes/bootstrap/templates/product/show.twig
+++ b/themes/bootstrap/templates/product/show.twig
@@ -174,6 +174,18 @@
                             {% endif %}
                         {% endfor %}
 
+                        <ul id="tag-list">
+                            {% for tag in product.tags if tag.isVisible %}
+                                {% if tag.description is empty %}
+                                    <li>
+                                        <a href="{{ tagUrl(tag) }}">
+                                            {{ tag.name }}
+                                        </a>
+                                    </li>
+                                {% endif %}
+                            {% endfor %}
+                        </ul>
+
                         <div class="divider"></div>
                         <div class="other-actions">
                             <div id="social-actions">
