Add foundation cdn links.

--- a/themes/foundation/templates/layout/parts/head.twig
+++ b/themes/foundation/templates/layout/parts/head.twig
@@ -9,5 +9,8 @@
 {% if pageCanonicalUrl is not empty %}
     <link rel="canonical" href="{{ pageCanonicalUrl }}" />
 {% endif %}
+
+<link rel="stylesheet" href="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
+<link href="https://cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel='stylesheet' type='text/css'>
+
 <link rel="stylesheet" href="{{ routeUrl('style.serve') }}?p=main.scss&formatter=compact">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
