--- a/themes/foundation/templates/layout/admin-parts/head.twig
+++ b/themes/foundation/templates/layout/admin-parts/head.twig
@@ -1,2 +1,6 @@
 {% include '@theme/layout/parts/head.twig' %}
+
+<link rel="stylesheet" href="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
+<link href="https://cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel='stylesheet' type='text/css'>
+
 <link rel="stylesheet" href="{{ routeUrl('style.serve') }}?p=main-admin.scss&formatter=compact">
